WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92167
IndexedDB: fix #include dependencies so IDBRequest isn't an include root
https://bugs.webkit.org/show_bug.cgi?id=92167
Summary
IndexedDB: fix #include dependencies so IDBRequest isn't an include root
Alec Flett
Reported
2012-07-24 15:14:38 PDT
IndexedDB: fix #include dependencies so IDBRequest isn't an include root
Attachments
Patch
(6.17 KB, patch)
2012-07-24 15:17 PDT
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cq-04
(996.09 KB, application/zip)
2012-07-24 16:59 PDT
,
WebKit Review Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alec Flett
Comment 1
2012-07-24 15:17:16 PDT
Created
attachment 154149
[details]
Patch
Alec Flett
Comment 2
2012-07-24 15:19:02 PDT
Ran into a recursive include issue while working on something else...
Joshua Bell
Comment 3
2012-07-24 15:21:05 PDT
LGTM
Alec Flett
Comment 4
2012-07-24 15:35:03 PDT
tony@ - r?
WebKit Review Bot
Comment 5
2012-07-24 16:59:16 PDT
Comment on
attachment 154149
[details]
Patch Rejecting
attachment 154149
[details]
from commit-queue. New failing tests: fast/forms/range/slider-onchange-event.html fast/forms/range/slider-mouse-events.html fast/forms/range/slider-delete-while-dragging-thumb.html Full output:
http://queues.webkit.org/results/13351003
WebKit Review Bot
Comment 6
2012-07-24 16:59:19 PDT
Created
attachment 154178
[details]
Archive of layout-test-results from gce-cq-04 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: gce-cq-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Alec Flett
Comment 7
2012-07-24 17:06:43 PDT
Comment on
attachment 154149
[details]
Patch lets try that again. those tests arent my failure!
WebKit Review Bot
Comment 8
2012-07-24 20:26:19 PDT
Comment on
attachment 154149
[details]
Patch Clearing flags on attachment: 154149 Committed
r123569
: <
http://trac.webkit.org/changeset/123569
>
WebKit Review Bot
Comment 9
2012-07-24 20:26:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug